fix spacing issues

--- a/rpm/styles.css
+++ b/rpm/styles.css
@@ -62,6 +62,9 @@ html, body {
 	margin: 10px 0;
 	width: calc(100% - 40px);
 }
+.navigation * {
+	font-size: 15px;
+}
 .circle {
 	width: 20px;
 	border-radius: 50%;
